maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:32: error: ';' expected but '=' found.
is DirectionFree(dir) : Boolean =
                                ^